[gd_scene load_steps=2 format=3 uid="uid://c5tj8j7skx4vg"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_rvbci"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource("1_rvbci")

[node name="MenuContainer" type="MarginContainer" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -35.0
offset_top = -230.0
offset_right = 35.0
offset_bottom = -94.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="MenuContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="OptionsButton" type="Button" parent="MenuContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="CreditsButton" type="Button" parent="MenuContainer/VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="QuitButton" type="Button" parent="MenuContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="MenuContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MenuContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MenuContainer/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="MenuContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
